<resources>
    <string name="app_name">Event</string>
    <string name="name">Nguoi nhen: vu tru moi</string>
    <string name="info">May 2023 PG 180 minutes</string>
    <string name="rent">Rent from $ 2.99</string>
    <string name="buy">Buy from $ 30.00</string>
    <string name="description">Spider-Man is an upcoming American superhero computer-animated film centered on the Marvel Comics character Miles Morales. The work is produced by Columbia Pictures and Sony Pictures Animation in cooperation with Marvel.</string>

</resources>