<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imv_1"
        android:layout_width="match_parent"
        android:layout_height="174dp"
        android:src="@drawable/anh2"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/imv_2"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:src="@drawable/anh1"
        app:layout_constraintBottom_toBottomOf="@id/imv_1"
        app:layout_constraintHorizontal_bias="0.109"
        app:layout_constraintLeft_toLeftOf="@id/imv_1"
        app:layout_constraintRight_toRightOf="@id/imv_1"
        app:layout_constraintTop_toBottomOf="@id/imv_1"
        app:layout_constraintVertical_bias="0.42" />

    <TextView
        android:id="@+id/tx_1"
        android:layout_width="197dp"
        android:layout_height="61dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/name"
        android:textSize="25dp"
        app:layout_constraintLeft_toRightOf="@id/imv_2"
        app:layout_constraintTop_toBottomOf="@id/imv_1" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="36dp"
        android:src="@drawable/favorite"
        app:layout_constraintEnd_toEndOf="@+id/imv_1"
        app:layout_constraintLeft_toRightOf="@id/tx_1"
        app:layout_constraintTop_toBottomOf="@id/imv_1" />

    <TextView
        android:id="@+id/tv_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tx_1"
        app:layout_constraintLeft_toLeftOf="@id/tx_1"
        android:text="@string/info"/>

    <Button
        android:id="@+id/button"
        android:layout_width="159dp"
        android:layout_height="60dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="28dp"
        android:text="@string/rent"
        android:backgroundTint="#ff0000"
        app:layout_constraintStart_toStartOf="@+id/imv_2"
        app:layout_constraintTop_toBottomOf="@id/tv_2" />

    <Button
        android:id="@+id/btnBuy"
        android:layout_width="159dp"
        android:layout_height="60dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="#ff0000"
        android:text="@string/buy"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@id/tv_2" />

    <View
        android:id="@+id/view_1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/button"
        android:background="#808080"/>

    <ImageView
        android:id="@+id/imv_3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/circle"
        app:layout_constraintTop_toBottomOf="@id/view_1"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toLeftOf="@id/button"
        app:layout_constraintRight_toLeftOf="@id/imv_4"/>

    <ImageView
        android:id="@+id/imv_4"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/family"
        app:layout_constraintTop_toBottomOf="@id/view_1"
        app:layout_constraintLeft_toRightOf="@id/imv_3"
        app:layout_constraintRight_toLeftOf="@id/imv_5"/>

    <ImageView
        android:id="@+id/imv_5"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/vote"
        app:layout_constraintTop_toBottomOf="@id/view_1"
        app:layout_constraintLeft_toRightOf="@id/imv_4"
        app:layout_constraintRight_toLeftOf="@id/imv_6"/>

    <ImageView
        android:id="@+id/imv_6"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/aaaa"
        app:layout_constraintTop_toBottomOf="@id/view_1"
        app:layout_constraintLeft_toRightOf="@id/imv_5"
        app:layout_constraintRight_toRightOf="@id/btnBuy"/>

    <TextView
        android:id="@+id/tv_3"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="242 ratings"
        app:layout_constraintTop_toBottomOf="@id/imv_3"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toLeftOf="@id/button"
        app:layout_constraintRight_toLeftOf="@id/imv_4"/>

    <TextView
        android:id="@+id/tv_4"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="Family"
        app:layout_constraintTop_toBottomOf="@id/imv_4"
        app:layout_constraintLeft_toRightOf="@id/imv_3"
        app:layout_constraintRight_toLeftOf="@id/imv_5"/>

    <TextView
        android:id="@+id/tv_5"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="71%"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/imv_5"
        app:layout_constraintLeft_toRightOf="@id/imv_4"
        app:layout_constraintRight_toLeftOf="@id/imv_6"/>

    <TextView
        android:id="@+id/tv_6"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="Similar"
        app:layout_constraintTop_toBottomOf="@id/imv_6"
        app:layout_constraintLeft_toRightOf="@id/imv_5"
        app:layout_constraintRight_toRightOf="@id/btnBuy"/>

    <View
        android:id="@+id/view_2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="120dp"
        android:background="#808080"
        app:layout_constraintTop_toBottomOf="@id/view_1" />

    <TextView
        android:id="@+id/tv_7"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="10dp"
        android:text="@string/description"
        android:gravity="center|top"
        android:textSize="23dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_2" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="#808080"
        app:layout_constraintTop_toBottomOf="@id/tv_7" />


</androidx.constraintlayout.widget.ConstraintLayout>
